# adroit

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.claude/skills/adr/: SKILL.md
.claude/skills/doc-sync/: SKILL.md
.claude/skills/extend/: SKILL.md
.claude/skills/gate/: SKILL.md
.claude/skills/harden/: SKILL.md
.claude/skills/use-adroit/: SKILL.md
.github/workflows/: ci.yml  pages.yml
adr/accepted/: 0001-adopt-rig-for-adroit-s-ai-integration.md  0004-manifest-semantics-live-in-an-owned-classified-table.md  0006-flag-level-escalation-semantics-in-the-manifest.md  0007-reclassify-publish-as-a-write-in-the-manifest.md  0008-persist-implementation-plans-inside-the-adr-document.md  0009-defer-embeddings-behind-a-measured-retrieval-miss-criterion.md  0010-import-emits-a-machine-seed-summary-under-o-json.md  0011-persist-creation-dates-in-the-markdown-profile.md  0013-retire-published-distribution-for-suite-done.md  0014-retire-the-database-backed-read-model.md  0015-retire-mcp-write-verb-exposure.md  0016-retire-additional-ai-providers.md  0017-retire-tui-widget-expansion.md  0018-retire-candidate-forge-tracker-and-web-expansion.md  0019-resolve-cross-repo-references-through-a-uniform-self-contained-chain.md
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/getting-started/: installation.md  quick-start.md
book/src/reference/: adr-format.md  cli.md
book/src/usage/: managing-adrs.md  tui.md
ci-templates/: README.md
ci-templates/github/: adr.yml  relink.yml
ci-templates/gitlab/: .gitlab-ci.yml
docs/: ROADMAP.md  book.toml  testing.md
docs/gruvbox/css/: variables.css
docs/src/: SUMMARY.md  introduction.md
docs/src/adr/accepted/: 0001-reinstate-the-in-repo-adr-corpus.md  0002-adopt-rig-for-adroit-s-ai-integration.md  0003-statelessness-and-idempotency-as-architectural-invariants.md  0005-mcp-server-projects-only-read-only-manifest-verbs.md  0012-adopt-a-tagged-release-and-changelog-discipline.md  0013-retire-published-distribution-for-suite-done.md
docs/src/dev/: adopt-read-slice.md  architecture.md  decisions.md  design.md  hardening.md  roadmap.md  skills.md  testing.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/reference/: adr-format.md  changelog.md  cli.md
docs/src/usage/: automation.md  ci-integration.md  forge.md  managing-adrs.md  publishing.md  tui.md  web.md  workflow.md  your-repo.md
docs/superpowers/: hardening-blitz-findings.md  hardening-blitz-worklog.md
docs/superpowers/specs/: 2026-06-04-adroit-hardening-blitz-design.md
examples/: README.md  assessment.json  assessment.toml  assessment.yaml
src/: adr.rs  ai_hook.rs  cli.rs  config.rs  forge_hook.rs  format.rs  frontmatter.rs  git.rs  history.rs  import.rs  index.rs  lib.rs  links.rs  lint.rs  main.rs  manifest.rs  naming.rs  plan.rs  publish.rs  query.rs  similar.rs  store.rs  template.rs  tui.rs  view.rs
src/ai/: mod.rs  rig_provider.rs
src/forge/: github.rs  gitlab.rs  jira.rs  linear.rs  mod.rs  monday.rs  noop.rs  oauth.rs
src/mcp/: mod.rs  tools.rs
src/publish/: docusaurus.rs  hugo.rs  jekyll.rs  mdbook.rs  mkdocs.rs  mod.rs  static_dir.rs
src/serve/: mod.rs  watch.rs
templates/: README.md
templates/adr/: madr.md  nygard.md
templates/ai/: ask.prompt.md  ask.system.md  compose.prompt.md  compose.system.md  interview.prompt.md  interview.system.md  lint.prompt.md  lint.system.md  plan.prompt.md  plan.system.md  summary.prompt.md  summary.system.md
templates/ci/github/: adr.yml  relink.yml
templates/ci/gitlab/: .gitlab-ci.yml
templates/review/: kickoff.md
tests/: ai_rig.rs  cli.rs  config_precedence.rs  date_source_git.rs  forge_cli.rs  forge_faults.rs  forge_oauth.rs  fuzz_parsers.rs  model.proptest-regressions  model.rs  parsers.proptest-regressions  parsers.rs
tests/fixtures/: golden-assessment.yaml
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  api.ts  main.ts  router.ts  statusColor.ts  style.css  useLiveReload.ts  util.ts
web/src/components/: CohortChart.vue  DirectoryPicker.vue  DonutChart.vue  EmptyState.vue  GrowthChart.vue  RelationsGraph.vue  SelectMenu.vue  StatTile.vue  StatusPill.vue
web/src/composables/: useCountUp.ts  useTheme.ts  useWorkspace.ts
web/src/views/: BrowseView.vue  DashboardView.vue  DetailView.vue  InsightsView.vue
